2007-01-02  Per Bothner  <per@bothner.com>

	* WriteTo.java: Update to use Path rather than URI_utils.

2006-12-29  Per Bothner  <per@bothner.com>

	* XDataType.java (anyURIType): Implement using gnu.text.Path.
	(toURI): Remove method - now use URIPath.makeURI instead.
	(isInstance, cast, valueOf): Update accordingly.

	* HttpPrinter.java (begindata): Fix non-CharSequence PreProcess-case.
	(append(String)): Removed, for same reason.
	* Nodes.java (append): Removed, for same reason.

2006-12-18  Per Bothner  <per@bothner.com>

	* WriteTo.java (writeTo, writeToIfChanged): Change filename to
	generalized URI, as handled by URI_utils.

2006-12-14  Per Bothner  <per@bothner.com>

	* XMLParser.jav: Removed class.  Now handled by new gnu.xml,XMLParser.
	* Makefile.am: Update accordingly.
	* Document.java: Update for new XMLParser API.

2006-12-06  Per Bothner  <per@bothner.com>

	* NodeType.java (GROUP_OK): Renamed to ELEMENT_OK.
	* KNode.java: Update for renamed Sequence constant.
	* MakeAttribute.java: Update for renamed Consumer methods.
	* MakeResponseHeader.java: Likewise.
	* Document.java: Likewise.
	* HttpPrinter.java: Likewise.
	* DocumentConstructor.java: Likewise.
	* MakeElement.java: Likewise.
	* ElementType.java: Likewise.
	* Nodes.java: Likewise.
	* OutPOrt.java: Likewise.

	* ElementType.java: GroupPredicate was renamed to ElementPredicate.

2006-11-29  Per Bothner  <per@bothner.com>

	* Document.java (docAvailable): Moved to gnu.xquery.util/NodeUtils.
	(parseCached): Moved to NodeUtils and renamed to docCached.

2006-11-25  Per Bothner  <per@bothner.com>

	* StringValue.java: Class moved to gnu.xml.TextUtils.
	* Makefile.am: Update acordingly.
	* XDataType.java (replaceWhitespace): Move static method to TextUtils.
	* MakeText.java (text$C): Move to TextUtils and rename to textValue.
	* XDataType.java: Update accordingly.
	* Document.java: Likewise.
	* CommentConstructor.java: Likewise.
	* MakeCDATA.java: Likewise.
	* MakeText.java: Likewise.