@@ -170,8 +170,11 @@ public class NodeUtils
       return arg;
     if (! (arg instanceof KNode))
       throw new WrongType("base-uri", 1, arg, "node()?");
-    Object uri = ((KNode) arg).baseURI();
-    return uri == null ? Values.empty : uri;
+    Path uri = ((KNode) arg).baseURI();
+    if (uri == null)
+      return Values.empty;
+    else
+      return uri;
   }
 
   /* #ifdef JAVA5 */
