@@ -1,5 +1,7 @@
 2007-01-04  Per Bothner  <per@bothner.com>
 
+	* NodeUtils.java (baseUri): Change type of local 'uri' to Path.
+
 	* StringUtils.java (encodeForUri): Move guts of method to URIPath.java.
 
 2006-12-29  Per Bothner  <per@bothner.com>
